Fix title zone overflow

--- a/assets/scss/templates/_portfolio.scss
+++ b/assets/scss/templates/_portfolio.scss
@@ -1,5 +1,6 @@
 .page-title {
   padding: 250px 0 150px;
+  overflow: hidden;
 
   .container {
     position: relative;
